# aoc2021

./: CMakeLists.txt  Day1.txt  Day11.txt  Day12.txt  Day13.txt  Day14.txt  Day15.txt  Day16.txt  Day17.txt  Day18.txt  Day19.txt  Day2.txt  Day20.txt  Day21.txt  Day22.txt  Day3.txt  Day4.txt  Day5.txt  Day7.txt  Day8.txt  Day9.txt  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  (+11 more)
